--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.scss" />
+    <link rel="stylesheet" href="./src/style.scss" />
   </head>
 
   <body>
-    <button class="button is-primary">Click me</button>
 
     <div id="app"></div>
 
